# test_program/Cargo.toml
[package]
name = "test_program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "test_program"

[features]
default = []
no-entrypoint = []
all = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "=0.30.1", features = ["memo"] }
solana-program = "1.18.26"